--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-!default.mode1v3
-!default.mode2v3
-!default.pbxuser
-!default.perspectivev3
 *.bak
 *.diff
 *.hmap
@@ -16,6 +12,7 @@
 *.swp
 *.xccheckout
 *.xcuserstate
+.DS_Store
 .vimrc.local
 DerivedData
 build/
